Colaboratory を使用して作成しました

--- a/Yukapedia_Git版.ipynb
+++ b/Yukapedia_Git版.ipynb
@@ -51,10 +51,10 @@
       "metadata": {
         "id": "c7eVMZj5wkD_",
         "colab_type": "code",
-        "outputId": "ebcbf711-4594-4949-8109-ea5b195f999f",
+        "outputId": "4ef74036-3724-4cbb-9bb2-75060ae9279c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 419
+          "height": 204
         }
       },
       "source": [
@@ -77,9 +77,9 @@
         "    df_list.append(tmp_df)\n",
         "df = pd.concat(df_list, ignore_index=True)\n",
         "\n",
-        "df\n"
+        "df.head()\n"
       ],
-      "execution_count": 73,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -145,74 +145,23 @@
               "      <td>かな✒</td>\n",
               "      <td>https://youtu.be/dPWB8CbsJ-E</td>\n",
               "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>10795</th>\n",
-              "      <td>0:48:06</td>\n",
-              "      <td>A</td>\n",
-              "      <td>//</td>\n",
-              "      <td>https://youtu.be/NvMIkTa9SXs</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>10796</th>\n",
-              "      <td>1:47:45</td>\n",
-              "      <td>F</td>\n",
-              "      <td>\\'_'</td>\n",
-              "      <td>https://youtu.be/NvMIkTa9SXs</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>10797</th>\n",
-              "      <td>1:46:50</td>\n",
-              "      <td>C</td>\n",
-              "      <td>ひらがな</td>\n",
-              "      <td>https://youtu.be/NvMIkTa9SXs</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>10798</th>\n",
-              "      <td>1:05:15</td>\n",
-              "      <td>X</td>\n",
-              "      <td>ひらがな</td>\n",
-              "      <td>https://youtu.be/NvMIkTa9SXs</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>10799</th>\n",
-              "      <td>1:52:43</td>\n",
-              "      <td>U</td>\n",
-              "      <td>\\'_'</td>\n",
-              "      <td>https://youtu.be/NvMIkTa9SXs</td>\n",
-              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>10800 rows × 4 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "          time name comment                           URL\n",
-              "0      2:13:03    Z     123  https://youtu.be/dPWB8CbsJ-E\n",
-              "1      0:20:47    P    ひらがな  https://youtu.be/dPWB8CbsJ-E\n",
-              "2      0:25:40    H     123  https://youtu.be/dPWB8CbsJ-E\n",
-              "3      1:59:07    F     123  https://youtu.be/dPWB8CbsJ-E\n",
-              "4      0:56:04    T     かな✒  https://youtu.be/dPWB8CbsJ-E\n",
-              "...        ...  ...     ...                           ...\n",
-              "10795  0:48:06    A      //  https://youtu.be/NvMIkTa9SXs\n",
-              "10796  1:47:45    F    \\'_'  https://youtu.be/NvMIkTa9SXs\n",
-              "10797  1:46:50    C    ひらがな  https://youtu.be/NvMIkTa9SXs\n",
-              "10798  1:05:15    X    ひらがな  https://youtu.be/NvMIkTa9SXs\n",
-              "10799  1:52:43    U    \\'_'  https://youtu.be/NvMIkTa9SXs\n",
-              "\n",
-              "[10800 rows x 4 columns]"
+              "      time name comment                           URL\n",
+              "0  2:13:03    Z     123  https://youtu.be/dPWB8CbsJ-E\n",
+              "1  0:20:47    P    ひらがな  https://youtu.be/dPWB8CbsJ-E\n",
+              "2  0:25:40    H     123  https://youtu.be/dPWB8CbsJ-E\n",
+              "3  1:59:07    F     123  https://youtu.be/dPWB8CbsJ-E\n",
+              "4  0:56:04    T     かな✒  https://youtu.be/dPWB8CbsJ-E"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 73
+          "execution_count": 3
         }
       ]
     },
@@ -299,7 +248,7 @@
         "\n",
         "df2"
       ],
-      "execution_count": 80,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
