Colaboratory を使用して作成しました

--- a/Yukapedia_Git版.ipynb
+++ b/Yukapedia_Git版.ipynb
@@ -40,9 +40,7 @@
         ">①左上　PlayBackgroundを選択  \n",
         ">②左端の▶を押して実行\n",
         "\n",
-        "2020/03/17 追加　完全一致検索  \n",
-        "2020/03/18 追加　動画URL生成  \n",
-        "2020/03/19 追加　正規表現検索  \n",
+        "2020/03/19 追加　完全一致検索  正規表現検索　動画URL生成  \n",
         "2020/04/06 試作　GitHub版  "
       ]
     },
@@ -51,7 +49,7 @@
       "metadata": {
         "id": "c7eVMZj5wkD_",
         "colab_type": "code",
-        "outputId": "4ef74036-3724-4cbb-9bb2-75060ae9279c",
+        "outputId": "cd8edab5-0e9c-4a13-8189-691af0917297",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -67,7 +65,7 @@
         "youtube = 'https://youtu.be/'\n",
         "videos = pd.read_csv(master + 'videos.csv')\n",
         "\n",
-        "videoId = videos['videoId'].head(4)\n",
+        "videoId = videos['videoId']\n",
         "\n",
         "# コメント一覧　作成\n",
         "df_list=[]\n",
@@ -112,37 +110,37 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>2:13:03</td>\n",
-              "      <td>Z</td>\n",
-              "      <td>123</td>\n",
+              "      <td>-0:49</td>\n",
+              "      <td>D.Y</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>https://youtu.be/dPWB8CbsJ-E</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>0:20:47</td>\n",
-              "      <td>P</td>\n",
-              "      <td>ひらがな</td>\n",
+              "      <td>-0:49</td>\n",
+              "      <td>太陽の塔</td>\n",
+              "      <td>テトリスのロゴに適当に紙貼っておこうw</td>\n",
               "      <td>https://youtu.be/dPWB8CbsJ-E</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>0:25:40</td>\n",
-              "      <td>H</td>\n",
-              "      <td>123</td>\n",
+              "      <td>-0:49</td>\n",
+              "      <td>Fumy H</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>https://youtu.be/dPWB8CbsJ-E</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>1:59:07</td>\n",
-              "      <td>F</td>\n",
-              "      <td>123</td>\n",
+              "      <td>-0:48</td>\n",
+              "      <td>司令_つかされい</td>\n",
+              "      <td>しばらくスイッチ配信も厳しいか</td>\n",
               "      <td>https://youtu.be/dPWB8CbsJ-E</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>0:56:04</td>\n",
-              "      <td>T</td>\n",
-              "      <td>かな✒</td>\n",
+              "      <td>-0:48</td>\n",
+              "      <td>麻雀ビギナーしょーしょん</td>\n",
+              "      <td>めでたい日記念</td>\n",
               "      <td>https://youtu.be/dPWB8CbsJ-E</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
@@ -150,12 +148,12 @@
               "</div>"
             ],
             "text/plain": [
-              "      time name comment                           URL\n",
-              "0  2:13:03    Z     123  https://youtu.be/dPWB8CbsJ-E\n",
-              "1  0:20:47    P    ひらがな  https://youtu.be/dPWB8CbsJ-E\n",
-              "2  0:25:40    H     123  https://youtu.be/dPWB8CbsJ-E\n",
-              "3  1:59:07    F     123  https://youtu.be/dPWB8CbsJ-E\n",
-              "4  0:56:04    T     かな✒  https://youtu.be/dPWB8CbsJ-E"
+              "    time          name              comment                           URL\n",
+              "0  -0:49           D.Y                  NaN  https://youtu.be/dPWB8CbsJ-E\n",
+              "1  -0:49          太陽の塔  テトリスのロゴに適当に紙貼っておこうw  https://youtu.be/dPWB8CbsJ-E\n",
+              "2  -0:49        Fumy H                  NaN  https://youtu.be/dPWB8CbsJ-E\n",
+              "3  -0:48      司令_つかされい      しばらくスイッチ配信も厳しいか  https://youtu.be/dPWB8CbsJ-E\n",
+              "4  -0:48  麻雀ビギナーしょーしょん              めでたい日記念  https://youtu.be/dPWB8CbsJ-E"
             ]
           },
           "metadata": {
