Colaboratory を使用して作成しました

--- a/Yukapedia_Git版.ipynb
+++ b/Yukapedia_Git版.ipynb
@@ -74,6 +74,184 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "ifVTLDWtid6N",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 419
+        },
+        "outputId": "c13123e3-6e2a-4145-dc6c-b86d38577bb0"
+      },
+      "source": [
+        "df['URL']= Id\n",
+        "df['title'] = 0\n",
+        "\n",
+        "df"
+      ],
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>time</th>\n",
+              "      <th>name</th>\n",
+              "      <th>comment</th>\n",
+              "      <th>spchat</th>\n",
+              "      <th>URL</th>\n",
+              "      <th>title</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>-0:10</td>\n",
+              "      <td>スーパーライト</td>\n",
+              "      <td>〇〇〇〇を待っています</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>LZVdK5kgSOk</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>-0:09</td>\n",
+              "      <td>kyo sirogumi</td>\n",
+              "      <td>ふるえてきた</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>LZVdK5kgSOk</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>-0:09</td>\n",
+              "      <td>しれいかん</td>\n",
+              "      <td>1分！</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>LZVdK5kgSOk</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>-0:09</td>\n",
+              "      <td>ただのF</td>\n",
+              "      <td>歌って歌って！</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>LZVdK5kgSOk</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>-0:08</td>\n",
+              "      <td>Westeria</td>\n",
+              "      <td>嬉しさでいえば去年のクリスマス以上だわ</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>LZVdK5kgSOk</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>901931</th>\n",
+              "      <td>57:55</td>\n",
+              "      <td>玉木崎</td>\n",
+              "      <td>そうそう</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>LZVdK5kgSOk</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>901932</th>\n",
+              "      <td>57:55</td>\n",
+              "      <td>foxですよ ch</td>\n",
+              "      <td>黄金の鉄でできた鍵</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>LZVdK5kgSOk</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>901933</th>\n",
+              "      <td>57:56</td>\n",
+              "      <td>ユーミン</td>\n",
+              "      <td>草</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>LZVdK5kgSOk</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>901934</th>\n",
+              "      <td>57:56</td>\n",
+              "      <td>グリヴェン</td>\n",
+              "      <td>不吉だ</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>LZVdK5kgSOk</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>901935</th>\n",
+              "      <td>57:56</td>\n",
+              "      <td>魔法使いメレブ</td>\n",
+              "      <td>行くしかない</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>LZVdK5kgSOk</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>901936 rows × 6 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "         time          name              comment spchat          URL  title\n",
+              "0       -0:10       スーパーライト          〇〇〇〇を待っています    NaN  LZVdK5kgSOk      0\n",
+              "1       -0:09  kyo sirogumi               ふるえてきた    NaN  LZVdK5kgSOk      0\n",
+              "2       -0:09         しれいかん                  1分！    NaN  LZVdK5kgSOk      0\n",
+              "3       -0:09          ただのF              歌って歌って！    NaN  LZVdK5kgSOk      0\n",
+              "4       -0:08      Westeria  嬉しさでいえば去年のクリスマス以上だわ    NaN  LZVdK5kgSOk      0\n",
+              "...       ...           ...                  ...    ...          ...    ...\n",
+              "901931  57:55           玉木崎                 そうそう    NaN  LZVdK5kgSOk      0\n",
+              "901932  57:55     foxですよ ch            黄金の鉄でできた鍵    NaN  LZVdK5kgSOk      0\n",
+              "901933  57:56          ユーミン                    草    NaN  LZVdK5kgSOk      0\n",
+              "901934  57:56         グリヴェン                  不吉だ    NaN  LZVdK5kgSOk      0\n",
+              "901935  57:56       魔法使いメレブ               行くしかない    NaN  LZVdK5kgSOk      0\n",
+              "\n",
+              "[901936 rows x 6 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "umNZJnofCCvw",
         "colab_type": "code",
         "colab": {
@@ -90,7 +268,7 @@
         "\n",
         "df['URL']= youtube + Id + '?t=' + s + 's'\n",
         "\n",
-        "df"
+        "df.append()"
       ],
       "execution_count": 55,
       "outputs": [
