--- a/Yukapedia_Git版.ipynb
+++ b/Yukapedia_Git版.ipynb
@@ -49,11 +49,11 @@
       "metadata": {
         "id": "c7eVMZj5wkD_",
         "colab_type": "code",
+        "outputId": "e012878d-c6e6-46d3-dae3-233a3573e830",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 436
-        },
-        "outputId": "876a2588-c6fa-4782-d7e9-0d62aae94c4b"
+          "height": 606
+        }
       },
       "source": [
         "# ← の ▶ を押して実行してください\n",
@@ -73,10 +73,21 @@
         "    df_list.append(tmp_df)\n",
         "df = pd.concat(df_list, ignore_index=True)\n",
         "\n",
+        "# 配信タイトル、公開時間\n",
+        "df = df.merge(videos)\n",
+        "\n",
+        "# 再生時間指定URL\n",
+        "trans = str.maketrans({':': '',',': ''})\n",
+        "s = df['time'].str.translate(trans).astype(int)\n",
+        "s = s-40*(abs(s)//100)-2400*(abs(s)//10000)+再生開始時間\n",
+        "s = ((abs(s)+s)//2).astype(str)\n",
+        "\n",
+        "df['videoId'] = youtube + df['videoId'] + '?t=' + s + 's'\n",
+        "\n",
         "print('コメント取得終了')\n",
         "df"
       ],
-      "execution_count": 107,
+      "execution_count": 120,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,6 +122,8 @@
               "      <th>name</th>\n",
               "      <th>comment</th>\n",
               "      <th>videoId</th>\n",
+              "      <th>title</th>\n",
+              "      <th>publishedAt</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -119,38 +132,50 @@
               "      <td>-1:41</td>\n",
               "      <td>如水</td>\n",
               "      <td>待機</td>\n",
-              "      <td>gY1g0LbsMQw</td>\n",
+              "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
+              "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
+              "      <td>2020-04-06T15:14:52.000Z</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>-1:37</td>\n",
               "      <td>紫ユウキ</td>\n",
               "      <td>しおしおしてきた！</td>\n",
-              "      <td>gY1g0LbsMQw</td>\n",
+              "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
+              "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
+              "      <td>2020-04-06T15:14:52.000Z</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>-1:37</td>\n",
               "      <td>暇つぶし</td>\n",
               "      <td>待機</td>\n",
-              "      <td>gY1g0LbsMQw</td>\n",
+              "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
+              "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
+              "      <td>2020-04-06T15:14:52.000Z</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>-1:34</td>\n",
               "      <td>si n</td>\n",
               "      <td>しおしおっ</td>\n",
-              "      <td>gY1g0LbsMQw</td>\n",
+              "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
+              "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
+              "      <td>2020-04-06T15:14:52.000Z</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>-1:34</td>\n",
               "      <td>pv order</td>\n",
               "      <td>待機🌸</td>\n",
-              "      <td>gY1g0LbsMQw</td>\n",
+              "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
+              "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
+              "      <td>2020-04-06T15:14:52.000Z</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
@@ -161,62 +186,72 @@
               "      <td>2:05:39</td>\n",
               "      <td>はやち</td>\n",
               "      <td>ありがとうーー</td>\n",
-              "      <td>LZVdK5kgSOk</td>\n",
+              "      <td>https://youtu.be/LZVdK5kgSOk?t=7509s</td>\n",
+              "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
+              "      <td>2019-12-24T12:14:30.000Z</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>796061</th>\n",
               "      <td>2:05:39</td>\n",
               "      <td>チヒロ氏</td>\n",
               "      <td>お疲れ様でした！</td>\n",
-              "      <td>LZVdK5kgSOk</td>\n",
+              "      <td>https://youtu.be/LZVdK5kgSOk?t=7509s</td>\n",
+              "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
+              "      <td>2019-12-24T12:14:30.000Z</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>796062</th>\n",
               "      <td>2:05:40</td>\n",
               "      <td>ふむふむ</td>\n",
               "      <td>あかん涙出てきた</td>\n",
-              "      <td>LZVdK5kgSOk</td>\n",
+              "      <td>https://youtu.be/LZVdK5kgSOk?t=7510s</td>\n",
+              "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
+              "      <td>2019-12-24T12:14:30.000Z</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>796063</th>\n",
               "      <td>2:05:40</td>\n",
               "      <td>法条裕一</td>\n",
               "      <td>お疲れさま～</td>\n",
-              "      <td>LZVdK5kgSOk</td>\n",
+              "      <td>https://youtu.be/LZVdK5kgSOk?t=7510s</td>\n",
+              "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
+              "      <td>2019-12-24T12:14:30.000Z</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>796064</th>\n",
               "      <td>2:05:40</td>\n",
               "      <td>a ha</td>\n",
               "      <td>お疲れ様でした！ありがとうございました！</td>\n",
-              "      <td>LZVdK5kgSOk</td>\n",
+              "      <td>https://youtu.be/LZVdK5kgSOk?t=7510s</td>\n",
+              "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
+              "      <td>2019-12-24T12:14:30.000Z</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>796065 rows × 4 columns</p>\n",
+              "<p>796065 rows × 6 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "           time      name               comment      videoId\n",
-              "0         -1:41        如水                    待機  gY1g0LbsMQw\n",
-              "1         -1:37      紫ユウキ             しおしおしてきた！  gY1g0LbsMQw\n",
-              "2         -1:37      暇つぶし                    待機  gY1g0LbsMQw\n",
-              "3         -1:34      si n                 しおしおっ  gY1g0LbsMQw\n",
-              "4         -1:34  pv order                   待機🌸  gY1g0LbsMQw\n",
-              "...         ...       ...                   ...          ...\n",
-              "796060  2:05:39       はやち               ありがとうーー  LZVdK5kgSOk\n",
-              "796061  2:05:39      チヒロ氏              お疲れ様でした！  LZVdK5kgSOk\n",
-              "796062  2:05:40      ふむふむ              あかん涙出てきた  LZVdK5kgSOk\n",
-              "796063  2:05:40      法条裕一                お疲れさま～  LZVdK5kgSOk\n",
-              "796064  2:05:40      a ha  お疲れ様でした！ありがとうございました！  LZVdK5kgSOk\n",
+              "           time  ...               publishedAt\n",
+              "0         -1:41  ...  2020-04-06T15:14:52.000Z\n",
+              "1         -1:37  ...  2020-04-06T15:14:52.000Z\n",
+              "2         -1:37  ...  2020-04-06T15:14:52.000Z\n",
+              "3         -1:34  ...  2020-04-06T15:14:52.000Z\n",
+              "4         -1:34  ...  2020-04-06T15:14:52.000Z\n",
+              "...         ...  ...                       ...\n",
+              "796060  2:05:39  ...  2019-12-24T12:14:30.000Z\n",
+              "796061  2:05:39  ...  2019-12-24T12:14:30.000Z\n",
+              "796062  2:05:40  ...  2019-12-24T12:14:30.000Z\n",
+              "796063  2:05:40  ...  2019-12-24T12:14:30.000Z\n",
+              "796064  2:05:40  ...  2019-12-24T12:14:30.000Z\n",
               "\n",
-              "[796065 rows x 4 columns]"
+              "[796065 rows x 6 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 107
+          "execution_count": 120
         }
       ]
     },
@@ -225,7 +260,7 @@
       "metadata": {
         "id": "umNZJnofCCvw",
         "colab_type": "code",
-        "outputId": "e8d4ee4d-f075-46f8-ddc8-a6fedaf88148",
+        "outputId": "12426cbb-8f00-408c-f96d-573d83cbefc4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 589
@@ -243,33 +278,21 @@
         "\n",
         "再生開始時間 =  -30#@param {type:\"integer\"}\n",
         "\n",
-        "def query_condition(data, col, query, is_perfect, is_regex):\n",
-        "    if is_perfect:\n",
-        "        return data[col].str.match(query) if is_regex else data[col] == query\n",
-        "    else:\n",
-        "        return data[col].str.contains(query, na=False, regex=is_regex)\n",
+        "#def query_condition(data, col, query, is_perfect, is_regex):\n",
+        "#    if is_perfect:\n",
+        "#        return data[col].str.match(query) if is_regex else data[col] == query\n",
+        "#    else:\n",
+        "#        return data[col].str.contains(query, na=False, regex=is_regex)\n",
         "\n",
         "name_condition = query_condition(df, \"name\", 名前, 名前完全一致, 名前正規表現)\n",
         "comment_condition = query_condition(df, \"comment\", コメント, コメント完全一致, コメント正規表現)\n",
         "\n",
         "df2 = df[name_condition & comment_condition].copy()\n",
         "\n",
-        "# time, file(videoID) → 再生時間指定URL\n",
-        "# start, end指定URLで、動画の一部だけ切り抜くのもいいかも\n",
-        "\n",
-        "df3 = df2.merge(videos)\n",
-        "\n",
-        "trans = str.maketrans({':': '',',': ''})\n",
-        "s = df3['time'].str.translate(trans).astype(int)\n",
-        "s = s-40*(abs(s)//100)-2400*(abs(s)//10000)+再生開始時間\n",
-        "s = ((abs(s)+s)//2).astype(str)\n",
-        "\n",
-        "df3['videoId'] = youtube + Id + '?t=' + s + 's'\n",
-        "\n",
         "pd.set_option('display.max_rows', 10000)\n",
-        "df3"
+        "df2"
       ],
-      "execution_count": 108,
+      "execution_count": 122,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -303,47 +326,47 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>0</th>\n",
+              "      <th>3</th>\n",
               "      <td>-1:34</td>\n",
               "      <td>si n</td>\n",
               "      <td>しおしおっ</td>\n",
-              "      <td>https://youtu.be/LZVdK5kgSOk?t=0s</td>\n",
-              "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
-              "      <td>2020-04-06T15:14:52.000Z</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>-1:34</td>\n",
-              "      <td>pv order</td>\n",
-              "      <td>待機🌸</td>\n",
-              "      <td>https://youtu.be/LZVdK5kgSOk?t=0s</td>\n",
-              "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
-              "      <td>2020-04-06T15:14:52.000Z</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>-1:19</td>\n",
-              "      <td>a i</td>\n",
-              "      <td>テトリスやりながら雑談配信出来る栞桜さんってやっぱすげーんだなーって</td>\n",
-              "      <td>https://youtu.be/LZVdK5kgSOk?t=0s</td>\n",
-              "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
-              "      <td>2020-04-06T15:14:52.000Z</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>-1:07</td>\n",
-              "      <td>J MAEDA</td>\n",
-              "      <td>待機</td>\n",
-              "      <td>https://youtu.be/LZVdK5kgSOk?t=0s</td>\n",
+              "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
               "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
               "      <td>2020-04-06T15:14:52.000Z</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
+              "      <td>-1:34</td>\n",
+              "      <td>pv order</td>\n",
+              "      <td>待機🌸</td>\n",
+              "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
+              "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
+              "      <td>2020-04-06T15:14:52.000Z</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>-1:19</td>\n",
+              "      <td>a i</td>\n",
+              "      <td>テトリスやりながら雑談配信出来る栞桜さんってやっぱすげーんだなーって</td>\n",
+              "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
+              "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
+              "      <td>2020-04-06T15:14:52.000Z</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15</th>\n",
+              "      <td>-1:07</td>\n",
+              "      <td>J MAEDA</td>\n",
+              "      <td>待機</td>\n",
+              "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
+              "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
+              "      <td>2020-04-06T15:14:52.000Z</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>19</th>\n",
               "      <td>-1:03</td>\n",
               "      <td>rapid eye rabbit</td>\n",
               "      <td>しおしおしてきた</td>\n",
-              "      <td>https://youtu.be/LZVdK5kgSOk?t=0s</td>\n",
+              "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
               "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
               "      <td>2020-04-06T15:14:52.000Z</td>\n",
               "    </tr>\n",
@@ -357,7 +380,7 @@
               "      <td>...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>88123</th>\n",
+              "      <th>796040</th>\n",
               "      <td>2:05:36</td>\n",
               "      <td>‽RǚðE ‽</td>\n",
               "      <td>お疲れさまでした！</td>\n",
@@ -366,7 +389,7 @@
               "      <td>2019-12-24T12:14:30.000Z</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>88124</th>\n",
+              "      <th>796051</th>\n",
               "      <td>2:05:38</td>\n",
               "      <td>Mr. yakushasu</td>\n",
               "      <td>たのしみ</td>\n",
@@ -375,7 +398,7 @@
               "      <td>2019-12-24T12:14:30.000Z</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>88125</th>\n",
+              "      <th>796052</th>\n",
               "      <td>2:05:39</td>\n",
               "      <td>いなむ〜Ψ Ψ</td>\n",
               "      <td>ありがとう。</td>\n",
@@ -384,7 +407,7 @@
               "      <td>2019-12-24T12:14:30.000Z</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>88126</th>\n",
+              "      <th>796056</th>\n",
               "      <td>2:05:39</td>\n",
               "      <td>L DANIE</td>\n",
               "      <td>お疲れさまでした！</td>\n",
@@ -393,7 +416,7 @@
               "      <td>2019-12-24T12:14:30.000Z</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>88127</th>\n",
+              "      <th>796064</th>\n",
               "      <td>2:05:40</td>\n",
               "      <td>a ha</td>\n",
               "      <td>お疲れ様でした！ありがとうございました！</td>\n",
@@ -407,18 +430,18 @@
               "</div>"
             ],
             "text/plain": [
-              "          time  ...               publishedAt\n",
-              "0        -1:34  ...  2020-04-06T15:14:52.000Z\n",
-              "1        -1:34  ...  2020-04-06T15:14:52.000Z\n",
-              "2        -1:19  ...  2020-04-06T15:14:52.000Z\n",
-              "3        -1:07  ...  2020-04-06T15:14:52.000Z\n",
-              "4        -1:03  ...  2020-04-06T15:14:52.000Z\n",
-              "...        ...  ...                       ...\n",
-              "88123  2:05:36  ...  2019-12-24T12:14:30.000Z\n",
-              "88124  2:05:38  ...  2019-12-24T12:14:30.000Z\n",
-              "88125  2:05:39  ...  2019-12-24T12:14:30.000Z\n",
-              "88126  2:05:39  ...  2019-12-24T12:14:30.000Z\n",
-              "88127  2:05:40  ...  2019-12-24T12:14:30.000Z\n",
+              "           time  ...               publishedAt\n",
+              "3         -1:34  ...  2020-04-06T15:14:52.000Z\n",
+              "4         -1:34  ...  2020-04-06T15:14:52.000Z\n",
+              "10        -1:19  ...  2020-04-06T15:14:52.000Z\n",
+              "15        -1:07  ...  2020-04-06T15:14:52.000Z\n",
+              "19        -1:03  ...  2020-04-06T15:14:52.000Z\n",
+              "...         ...  ...                       ...\n",
+              "796040  2:05:36  ...  2019-12-24T12:14:30.000Z\n",
+              "796051  2:05:38  ...  2019-12-24T12:14:30.000Z\n",
+              "796052  2:05:39  ...  2019-12-24T12:14:30.000Z\n",
+              "796056  2:05:39  ...  2019-12-24T12:14:30.000Z\n",
+              "796064  2:05:40  ...  2019-12-24T12:14:30.000Z\n",
               "\n",
               "[88128 rows x 6 columns]"
             ]
@@ -426,7 +449,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 108
+          "execution_count": 122
         }
       ]
     },
