--- a/Yukapedia_Git版.ipynb
+++ b/Yukapedia_Git版.ipynb
@@ -49,7 +49,7 @@
       "metadata": {
         "id": "c7eVMZj5wkD_",
         "colab_type": "code",
-        "outputId": "e012878d-c6e6-46d3-dae3-233a3573e830",
+        "outputId": "4d310e73-004f-4eca-e5dc-53025de53b20",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 606
@@ -60,7 +60,7 @@
         "\n",
         "import pandas as pd\n",
         "\n",
-        "# 配信一覧 videos 取得\n",
+        "# 配信一覧　取得\n",
         "master = 'https://raw.githubusercontent.com/hanbun-pom/siosio/master/'\n",
         "youtube = 'https://youtu.be/'\n",
         "videos = pd.read_csv(master + 'videos.csv')\n",
@@ -87,7 +87,7 @@
         "print('コメント取得終了')\n",
         "df"
       ],
-      "execution_count": 120,
+      "execution_count": 123,
       "outputs": [
         {
           "output_type": "stream",
@@ -251,7 +251,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 120
+          "execution_count": 123
         }
       ]
     },
@@ -260,7 +260,7 @@
       "metadata": {
         "id": "umNZJnofCCvw",
         "colab_type": "code",
-        "outputId": "12426cbb-8f00-408c-f96d-573d83cbefc4",
+        "outputId": "a841dd61-de4d-4eec-9dcb-d917d3707ef0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 589
@@ -269,7 +269,7 @@
       "source": [
         "#「名前」「コメント」に特定のキーワードを含むコメントを抽出\n",
         "\n",
-        "名前 = \" \"  #@param {type:\"string\"}\n",
+        "名前 = \"\"  #@param {type:\"string\"}\n",
         "名前完全一致 = False  #@param {type:\"boolean\"} \n",
         "名前正規表現 = False  #@param {type:\"boolean\"} \n",
         "コメント = \"\"  #@param {type:\"string\"}\n",
@@ -278,11 +278,11 @@
         "\n",
         "再生開始時間 =  -30#@param {type:\"integer\"}\n",
         "\n",
-        "#def query_condition(data, col, query, is_perfect, is_regex):\n",
-        "#    if is_perfect:\n",
-        "#        return data[col].str.match(query) if is_regex else data[col] == query\n",
-        "#    else:\n",
-        "#        return data[col].str.contains(query, na=False, regex=is_regex)\n",
+        "def query_condition(data, col, query, is_perfect, is_regex):\n",
+        "    if is_perfect:\n",
+        "        return data[col].str.match(query) if is_regex else data[col] == query\n",
+        "    else:\n",
+        "        return data[col].str.contains(query, na=False, regex=is_regex)\n",
         "\n",
         "name_condition = query_condition(df, \"name\", 名前, 名前完全一致, 名前正規表現)\n",
         "comment_condition = query_condition(df, \"comment\", コメント, コメント完全一致, コメント正規表現)\n",
@@ -292,7 +292,7 @@
         "pd.set_option('display.max_rows', 10000)\n",
         "df2"
       ],
-      "execution_count": 122,
+      "execution_count": 131,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -326,6 +326,33 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>-1:41</td>\n",
+              "      <td>如水</td>\n",
+              "      <td>待機</td>\n",
+              "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
+              "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
+              "      <td>2020-04-06T15:14:52.000Z</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>-1:37</td>\n",
+              "      <td>紫ユウキ</td>\n",
+              "      <td>しおしおしてきた！</td>\n",
+              "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
+              "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
+              "      <td>2020-04-06T15:14:52.000Z</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>-1:37</td>\n",
+              "      <td>暇つぶし</td>\n",
+              "      <td>待機</td>\n",
+              "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
+              "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
+              "      <td>2020-04-06T15:14:52.000Z</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>-1:34</td>\n",
               "      <td>si n</td>\n",
@@ -344,33 +371,6 @@
               "      <td>2020-04-06T15:14:52.000Z</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>10</th>\n",
-              "      <td>-1:19</td>\n",
-              "      <td>a i</td>\n",
-              "      <td>テトリスやりながら雑談配信出来る栞桜さんってやっぱすげーんだなーって</td>\n",
-              "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
-              "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
-              "      <td>2020-04-06T15:14:52.000Z</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>15</th>\n",
-              "      <td>-1:07</td>\n",
-              "      <td>J MAEDA</td>\n",
-              "      <td>待機</td>\n",
-              "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
-              "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
-              "      <td>2020-04-06T15:14:52.000Z</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>19</th>\n",
-              "      <td>-1:03</td>\n",
-              "      <td>rapid eye rabbit</td>\n",
-              "      <td>しおしおしてきた</td>\n",
-              "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
-              "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
-              "      <td>2020-04-06T15:14:52.000Z</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
               "      <th>...</th>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
@@ -380,38 +380,38 @@
               "      <td>...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>796040</th>\n",
-              "      <td>2:05:36</td>\n",
-              "      <td>‽RǚðE ‽</td>\n",
-              "      <td>お疲れさまでした！</td>\n",
-              "      <td>https://youtu.be/LZVdK5kgSOk?t=7506s</td>\n",
-              "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
-              "      <td>2019-12-24T12:14:30.000Z</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>796051</th>\n",
-              "      <td>2:05:38</td>\n",
-              "      <td>Mr. yakushasu</td>\n",
-              "      <td>たのしみ</td>\n",
-              "      <td>https://youtu.be/LZVdK5kgSOk?t=7508s</td>\n",
-              "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
-              "      <td>2019-12-24T12:14:30.000Z</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>796052</th>\n",
+              "      <th>796060</th>\n",
               "      <td>2:05:39</td>\n",
-              "      <td>いなむ〜Ψ Ψ</td>\n",
-              "      <td>ありがとう。</td>\n",
+              "      <td>はやち</td>\n",
+              "      <td>ありがとうーー</td>\n",
               "      <td>https://youtu.be/LZVdK5kgSOk?t=7509s</td>\n",
               "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
               "      <td>2019-12-24T12:14:30.000Z</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>796056</th>\n",
+              "      <th>796061</th>\n",
               "      <td>2:05:39</td>\n",
-              "      <td>L DANIE</td>\n",
-              "      <td>お疲れさまでした！</td>\n",
+              "      <td>チヒロ氏</td>\n",
+              "      <td>お疲れ様でした！</td>\n",
               "      <td>https://youtu.be/LZVdK5kgSOk?t=7509s</td>\n",
+              "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
+              "      <td>2019-12-24T12:14:30.000Z</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>796062</th>\n",
+              "      <td>2:05:40</td>\n",
+              "      <td>ふむふむ</td>\n",
+              "      <td>あかん涙出てきた</td>\n",
+              "      <td>https://youtu.be/LZVdK5kgSOk?t=7510s</td>\n",
+              "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
+              "      <td>2019-12-24T12:14:30.000Z</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>796063</th>\n",
+              "      <td>2:05:40</td>\n",
+              "      <td>法条裕一</td>\n",
+              "      <td>お疲れさま～</td>\n",
+              "      <td>https://youtu.be/LZVdK5kgSOk?t=7510s</td>\n",
               "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
               "      <td>2019-12-24T12:14:30.000Z</td>\n",
               "    </tr>\n",
@@ -426,30 +426,30 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>88128 rows × 6 columns</p>\n",
+              "<p>795305 rows × 6 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
               "           time  ...               publishedAt\n",
+              "0         -1:41  ...  2020-04-06T15:14:52.000Z\n",
+              "1         -1:37  ...  2020-04-06T15:14:52.000Z\n",
+              "2         -1:37  ...  2020-04-06T15:14:52.000Z\n",
               "3         -1:34  ...  2020-04-06T15:14:52.000Z\n",
               "4         -1:34  ...  2020-04-06T15:14:52.000Z\n",
-              "10        -1:19  ...  2020-04-06T15:14:52.000Z\n",
-              "15        -1:07  ...  2020-04-06T15:14:52.000Z\n",
-              "19        -1:03  ...  2020-04-06T15:14:52.000Z\n",
               "...         ...  ...                       ...\n",
-              "796040  2:05:36  ...  2019-12-24T12:14:30.000Z\n",
-              "796051  2:05:38  ...  2019-12-24T12:14:30.000Z\n",
-              "796052  2:05:39  ...  2019-12-24T12:14:30.000Z\n",
-              "796056  2:05:39  ...  2019-12-24T12:14:30.000Z\n",
+              "796060  2:05:39  ...  2019-12-24T12:14:30.000Z\n",
+              "796061  2:05:39  ...  2019-12-24T12:14:30.000Z\n",
+              "796062  2:05:40  ...  2019-12-24T12:14:30.000Z\n",
+              "796063  2:05:40  ...  2019-12-24T12:14:30.000Z\n",
               "796064  2:05:40  ...  2019-12-24T12:14:30.000Z\n",
               "\n",
-              "[88128 rows x 6 columns]"
+              "[795305 rows x 6 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 122
+          "execution_count": 131
         }
       ]
     },
