Colaboratory を使用して作成しました

--- a/Yukapedia_Git版.ipynb
+++ b/Yukapedia_Git版.ipynb
@@ -49,10 +49,10 @@
       "metadata": {
         "id": "c7eVMZj5wkD_",
         "colab_type": "code",
-        "outputId": "4d310e73-004f-4eca-e5dc-53025de53b20",
+        "outputId": "b246b11d-2d8a-47a1-ad07-44eb9e6c10dc",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 606
+          "height": 436
         }
       },
       "source": [
@@ -75,6 +75,7 @@
         "\n",
         "# 配信タイトル、公開時間\n",
         "df = df.merge(videos)\n",
+        "df['DateTime'] = df['DateTime'].replace('-|T.*', '', regex=True).astype(int)\n",
         "\n",
         "# 再生時間指定URL\n",
         "trans = str.maketrans({':': '',',': ''})\n",
@@ -87,7 +88,7 @@
         "print('コメント取得終了')\n",
         "df"
       ],
-      "execution_count": 123,
+      "execution_count": 168,
       "outputs": [
         {
           "output_type": "stream",
@@ -123,7 +124,7 @@
               "      <th>comment</th>\n",
               "      <th>videoId</th>\n",
               "      <th>title</th>\n",
-              "      <th>publishedAt</th>\n",
+              "      <th>DateTime</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -134,7 +135,7 @@
               "      <td>待機</td>\n",
               "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
               "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
-              "      <td>2020-04-06T15:14:52.000Z</td>\n",
+              "      <td>20200406</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -143,7 +144,7 @@
               "      <td>しおしおしてきた！</td>\n",
               "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
               "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
-              "      <td>2020-04-06T15:14:52.000Z</td>\n",
+              "      <td>20200406</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -152,7 +153,7 @@
               "      <td>待機</td>\n",
               "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
               "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
-              "      <td>2020-04-06T15:14:52.000Z</td>\n",
+              "      <td>20200406</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -161,7 +162,7 @@
               "      <td>しおしおっ</td>\n",
               "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
               "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
-              "      <td>2020-04-06T15:14:52.000Z</td>\n",
+              "      <td>20200406</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -170,7 +171,7 @@
               "      <td>待機🌸</td>\n",
               "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
               "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
-              "      <td>2020-04-06T15:14:52.000Z</td>\n",
+              "      <td>20200406</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
@@ -188,7 +189,7 @@
               "      <td>ありがとうーー</td>\n",
               "      <td>https://youtu.be/LZVdK5kgSOk?t=7509s</td>\n",
               "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
-              "      <td>2019-12-24T12:14:30.000Z</td>\n",
+              "      <td>20191224</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>796061</th>\n",
@@ -197,7 +198,7 @@
               "      <td>お疲れ様でした！</td>\n",
               "      <td>https://youtu.be/LZVdK5kgSOk?t=7509s</td>\n",
               "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
-              "      <td>2019-12-24T12:14:30.000Z</td>\n",
+              "      <td>20191224</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>796062</th>\n",
@@ -206,7 +207,7 @@
               "      <td>あかん涙出てきた</td>\n",
               "      <td>https://youtu.be/LZVdK5kgSOk?t=7510s</td>\n",
               "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
-              "      <td>2019-12-24T12:14:30.000Z</td>\n",
+              "      <td>20191224</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>796063</th>\n",
@@ -215,7 +216,7 @@
               "      <td>お疲れさま～</td>\n",
               "      <td>https://youtu.be/LZVdK5kgSOk?t=7510s</td>\n",
               "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
-              "      <td>2019-12-24T12:14:30.000Z</td>\n",
+              "      <td>20191224</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>796064</th>\n",
@@ -224,7 +225,7 @@
               "      <td>お疲れ様でした！ありがとうございました！</td>\n",
               "      <td>https://youtu.be/LZVdK5kgSOk?t=7510s</td>\n",
               "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
-              "      <td>2019-12-24T12:14:30.000Z</td>\n",
+              "      <td>20191224</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -232,18 +233,18 @@
               "</div>"
             ],
             "text/plain": [
-              "           time  ...               publishedAt\n",
-              "0         -1:41  ...  2020-04-06T15:14:52.000Z\n",
-              "1         -1:37  ...  2020-04-06T15:14:52.000Z\n",
-              "2         -1:37  ...  2020-04-06T15:14:52.000Z\n",
-              "3         -1:34  ...  2020-04-06T15:14:52.000Z\n",
-              "4         -1:34  ...  2020-04-06T15:14:52.000Z\n",
-              "...         ...  ...                       ...\n",
-              "796060  2:05:39  ...  2019-12-24T12:14:30.000Z\n",
-              "796061  2:05:39  ...  2019-12-24T12:14:30.000Z\n",
-              "796062  2:05:40  ...  2019-12-24T12:14:30.000Z\n",
-              "796063  2:05:40  ...  2019-12-24T12:14:30.000Z\n",
-              "796064  2:05:40  ...  2019-12-24T12:14:30.000Z\n",
+              "           time      name  ...                             title  DateTime\n",
+              "0         -1:41        如水  ...  【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】  20200406\n",
+              "1         -1:37      紫ユウキ  ...  【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】  20200406\n",
+              "2         -1:37      暇つぶし  ...  【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】  20200406\n",
+              "3         -1:34      si n  ...  【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】  20200406\n",
+              "4         -1:34  pv order  ...  【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】  20200406\n",
+              "...         ...       ...  ...                               ...       ...\n",
+              "796060  2:05:39       はやち  ...                【麻雀】#天鳳クリスマス杯【🎄🎅🎁】  20191224\n",
+              "796061  2:05:39      チヒロ氏  ...                【麻雀】#天鳳クリスマス杯【🎄🎅🎁】  20191224\n",
+              "796062  2:05:40      ふむふむ  ...                【麻雀】#天鳳クリスマス杯【🎄🎅🎁】  20191224\n",
+              "796063  2:05:40      法条裕一  ...                【麻雀】#天鳳クリスマス杯【🎄🎅🎁】  20191224\n",
+              "796064  2:05:40      a ha  ...                【麻雀】#天鳳クリスマス杯【🎄🎅🎁】  20191224\n",
               "\n",
               "[796065 rows x 6 columns]"
             ]
@@ -251,7 +252,37 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 123
+          "execution_count": 168
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "J_FeU0GLHArv",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "25964313-b5e7-4310-8b14-8ff871d4e15a"
+      },
+      "source": [
+        "df['publishedAt'][1][0:10]"
+      ],
+      "execution_count": 156,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'2020-04-06'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 156
         }
       ]
     },
