Colaboratory を使用して作成しました

--- a/Yukapedia_Git版.ipynb
+++ b/Yukapedia_Git版.ipynb
@@ -49,16 +49,15 @@
       "metadata": {
         "id": "c7eVMZj5wkD_",
         "colab_type": "code",
-        "outputId": "b246b11d-2d8a-47a1-ad07-44eb9e6c10dc",
+        "outputId": "ee4a2bb1-b2ce-4746-ca7f-962220f869f0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 436
         }
       },
       "source": [
-        "# ← の ▶ を押して実行してください\n",
-        "\n",
         "import pandas as pd\n",
+        "import datetime\n",
         "\n",
         "# 配信一覧　取得\n",
         "master = 'https://raw.githubusercontent.com/hanbun-pom/siosio/master/'\n",
@@ -75,7 +74,7 @@
         "\n",
         "# 配信タイトル、公開時間\n",
         "df = df.merge(videos)\n",
-        "df['DateTime'] = df['DateTime'].replace('-|T.*', '', regex=True).astype(int)\n",
+        "df['DateTime'] = pd.to_datetime(df['DateTime']).dt.date\n",
         "\n",
         "# 再生時間指定URL\n",
         "trans = str.maketrans({':': '',',': ''})\n",
@@ -88,7 +87,7 @@
         "print('コメント取得終了')\n",
         "df"
       ],
-      "execution_count": 168,
+      "execution_count": 185,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,7 +134,7 @@
               "      <td>待機</td>\n",
               "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
               "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
-              "      <td>20200406</td>\n",
+              "      <td>2020-04-06</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -144,7 +143,7 @@
               "      <td>しおしおしてきた！</td>\n",
               "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
               "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
-              "      <td>20200406</td>\n",
+              "      <td>2020-04-06</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -153,7 +152,7 @@
               "      <td>待機</td>\n",
               "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
               "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
-              "      <td>20200406</td>\n",
+              "      <td>2020-04-06</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -162,7 +161,7 @@
               "      <td>しおしおっ</td>\n",
               "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
               "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
-              "      <td>20200406</td>\n",
+              "      <td>2020-04-06</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -171,7 +170,7 @@
               "      <td>待機🌸</td>\n",
               "      <td>https://youtu.be/gY1g0LbsMQw?t=0s</td>\n",
               "      <td>【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】</td>\n",
-              "      <td>20200406</td>\n",
+              "      <td>2020-04-06</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
@@ -189,7 +188,7 @@
               "      <td>ありがとうーー</td>\n",
               "      <td>https://youtu.be/LZVdK5kgSOk?t=7509s</td>\n",
               "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
-              "      <td>20191224</td>\n",
+              "      <td>2019-12-24</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>796061</th>\n",
@@ -198,7 +197,7 @@
               "      <td>お疲れ様でした！</td>\n",
               "      <td>https://youtu.be/LZVdK5kgSOk?t=7509s</td>\n",
               "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
-              "      <td>20191224</td>\n",
+              "      <td>2019-12-24</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>796062</th>\n",
@@ -207,7 +206,7 @@
               "      <td>あかん涙出てきた</td>\n",
               "      <td>https://youtu.be/LZVdK5kgSOk?t=7510s</td>\n",
               "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
-              "      <td>20191224</td>\n",
+              "      <td>2019-12-24</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>796063</th>\n",
@@ -216,7 +215,7 @@
               "      <td>お疲れさま～</td>\n",
               "      <td>https://youtu.be/LZVdK5kgSOk?t=7510s</td>\n",
               "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
-              "      <td>20191224</td>\n",
+              "      <td>2019-12-24</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>796064</th>\n",
@@ -225,7 +224,7 @@
               "      <td>お疲れ様でした！ありがとうございました！</td>\n",
               "      <td>https://youtu.be/LZVdK5kgSOk?t=7510s</td>\n",
               "      <td>【麻雀】#天鳳クリスマス杯【🎄🎅🎁】</td>\n",
-              "      <td>20191224</td>\n",
+              "      <td>2019-12-24</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -233,18 +232,18 @@
               "</div>"
             ],
             "text/plain": [
-              "           time      name  ...                             title  DateTime\n",
-              "0         -1:41        如水  ...  【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】  20200406\n",
-              "1         -1:37      紫ユウキ  ...  【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】  20200406\n",
-              "2         -1:37      暇つぶし  ...  【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】  20200406\n",
-              "3         -1:34      si n  ...  【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】  20200406\n",
-              "4         -1:34  pv order  ...  【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】  20200406\n",
-              "...         ...       ...  ...                               ...       ...\n",
-              "796060  2:05:39       はやち  ...                【麻雀】#天鳳クリスマス杯【🎄🎅🎁】  20191224\n",
-              "796061  2:05:39      チヒロ氏  ...                【麻雀】#天鳳クリスマス杯【🎄🎅🎁】  20191224\n",
-              "796062  2:05:40      ふむふむ  ...                【麻雀】#天鳳クリスマス杯【🎄🎅🎁】  20191224\n",
-              "796063  2:05:40      法条裕一  ...                【麻雀】#天鳳クリスマス杯【🎄🎅🎁】  20191224\n",
-              "796064  2:05:40      a ha  ...                【麻雀】#天鳳クリスマス杯【🎄🎅🎁】  20191224\n",
+              "           time      name  ...                             title    DateTime\n",
+              "0         -1:41        如水  ...  【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】  2020-04-06\n",
+              "1         -1:37      紫ユウキ  ...  【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】  2020-04-06\n",
+              "2         -1:37      暇つぶし  ...  【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】  2020-04-06\n",
+              "3         -1:34      si n  ...  【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】  2020-04-06\n",
+              "4         -1:34  pv order  ...  【テトリス99】4列RENとやらを練習してみたい【視聴者参加型】  2020-04-06\n",
+              "...         ...       ...  ...                               ...         ...\n",
+              "796060  2:05:39       はやち  ...                【麻雀】#天鳳クリスマス杯【🎄🎅🎁】  2019-12-24\n",
+              "796061  2:05:39      チヒロ氏  ...                【麻雀】#天鳳クリスマス杯【🎄🎅🎁】  2019-12-24\n",
+              "796062  2:05:40      ふむふむ  ...                【麻雀】#天鳳クリスマス杯【🎄🎅🎁】  2019-12-24\n",
+              "796063  2:05:40      法条裕一  ...                【麻雀】#天鳳クリスマス杯【🎄🎅🎁】  2019-12-24\n",
+              "796064  2:05:40      a ha  ...                【麻雀】#天鳳クリスマス杯【🎄🎅🎁】  2019-12-24\n",
               "\n",
               "[796065 rows x 6 columns]"
             ]
@@ -252,37 +251,37 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 168
+          "execution_count": 185
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "J_FeU0GLHArv",
+        "id": "kMr6QlwnRwrB",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "25964313-b5e7-4310-8b14-8ff871d4e15a"
+        "outputId": "279bc6c6-402f-45ce-b5a5-68896ed4cae8"
       },
       "source": [
-        "df['publishedAt'][1][0:10]"
+        ""
       ],
-      "execution_count": 156,
+      "execution_count": 174,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'2020-04-06'"
+              "Timestamp('2020-04-06 00:00:00')"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 156
+          "execution_count": 174
         }
       ]
     },
@@ -308,6 +307,7 @@
         "コメント正規表現 = False  #@param {type:\"boolean\"} \n",
         "\n",
         "再生開始時間 =  -30#@param {type:\"integer\"}\n",
+        "日付範囲\n",
         "\n",
         "def query_condition(data, col, query, is_perfect, is_regex):\n",
         "    if is_perfect:\n",
@@ -323,7 +323,7 @@
         "pd.set_option('display.max_rows', 10000)\n",
         "df2"
       ],
-      "execution_count": 131,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
